fixed error with z-index incorrectly assigned

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body,
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: =0;
+    z-index: 0;
 }
 
 #listings {
